# elon-stormwater-drone

./: .gitignore  .gitmodules  README.md  changes_03-27-26.txt
ctrlr/: CMakeLists.txt  pinout.md  sdkconfig
ctrlr/components/: stormwater_lr1121
ctrlr/components/stormwater_display/: CMakeLists.txt  disp_ex.c  stormwater_display.c  stormwater_display.h
ctrlr/components/stormwater_io/: CMakeLists.txt  stormwater_io.c  stormwater_io.h
ctrlr/components/stormwater_lr1121/: CMakeLists.txt  lr11xx_hal.c  stormwater_lr1121.c  stormwater_lr1121.h
ctrlr/main/: CMakeLists.txt  ctrlr.c  ctrlr.h  idf_component.yml  stormwater_config.h
drone/: CMakeLists.txt  pinout.md  sdkconfig
drone/components/new_sensors/: CMakeLists.txt  new_sensors.c  new_sensors.h
drone/components/stormwater_drone_sensors/: CMakeLists.txt  stormwater_drone_sensors.c  stormwater_drone_sensors.h
drone/components/stormwater_drone_spool/: CMakeLists.txt  stormwater_drone_spool.c  stormwater_drone_spool.h
drone/components/stormwater_sensors/: stormwater_sensors.c  stormwater_sensors.h
drone/main/: CMakeLists.txt  drone.c  drone.h  idf_component.yml  stormwater_config.h
shared_components/stormwater_lr1121/: CMakeLists.txt  idf_component.yml  lr11xx_hal.c  stormwater_lr1121.h
shared_components/stormwater_lr1121/LR11XX_driver_SWDR001/: CMakeLists.txt
shared_components/stormwater_lr1121/LR11XX_driver_SWDR001/src/: lr11xx_bootloader.c  lr11xx_bootloader_types.h  lr11xx_crypto_engine.c  lr11xx_driver_version.h  lr11xx_gnss.c  lr11xx_radio.c
